<resources>
    <string name="app_name">Appku</string>
    <string name="masuk">Login</string>
    <string name="silahkan_masukan_data_anda">Silahkan Masukan Data Anda</string>
    <string name="email">Email</string>
    <string name="masukan_email_anda">Masukan Email Anda</string>
    <string name="password">Password</string>
    <string name="masukan_password_anda">Masukan Password Anda</string>
    <string name="lupa_password_ya">Lupa Password ya ?</string>
    <string name="login">Login</string>
    <string name="masuk_lewat_google">Masuk Lewat Google</string>
    <string name="belum_punya_akun_ya">Belum Punya Akun</string>
    <string name="klik_disini">Klik Disini !</string>
    <string name="bearer_token" />
    <string name="logout_button">Logout</string>
    <string name="daftar">Daftarkan</string>
    <string name="registrasikan">Registrasikan</string>
    <string name="username">Username</string>
    <string name="masukan_user_anda">Masukan Username Anda</string>
    <string name="pw_cf">Konfirmasi Password</string>
    <string name="konfirmasi_password_anda">Konfirmasi Password Anda</string>
    <string name="udah_punya_akun_ya">Udah Punya Akun ?</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="find">Find</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>
    <string name="warning_logout">Anda Yakin mau Keluar dari Akunmu ?</string>
    <string name="cancel">Cancel</string>
    <string name="gambar_profile">gambar_profile</string>
    <string name="ganti_data_profile">Ganti Data Profile</string>
    <string name="hi">Hi, </string>
    <string name="punya_masalah_hidup_silahkan_konsultasikan_disini">Punya masalah hidup !, Silahkan Konsultasikan Disini</string>
    <string name="cari_sesuatu_disini">Cari Sesuatu Disini</string>
    <string name="cari_orang_yang_kalian_obrolin">Cari orang yang kalian obrolin…</string>
    <string name="sedang_di_proses">Sedang Di Proses</string>
    <string name="pengaturan_data_pribadi">Pengaturan Data Pribadi</string>
    <string name="layanan_aplikasi">Layanan Aplikasi</string>
    <string name="main_course">Mental</string>
    <string name="jumat_28_februari_2023">Jumat, 28 Feb</string>
    <string name="_19_30">19:30</string>
    <string name="ayo_ikutan_webinar">Ayo Ikutan Webinar</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="berita_terbaru">Berita Terbaru</string>
    <string name="ada_kelas_baru_nih">Ada Kelas Baru Nih</string>
    <string name="title_class">Title Class</string>
    <string name="pemula">Pemula</string>
    <string name="videos">Videos</string>
    <string name="sosial">Sosial</string>
    <string name="peringatan">Peringatan</string>
    <string name="grup">Grup</string>
    <string name="nama_berita">Nama Berita</string>
    <string name="terapi_mindset">Terapi Mindset</string>
    <string name="pemberitahuan">Pemberitahuan</string>
    <string name="lihat_lebih_lanjut">Lihat Lebih Lanjut</string>
    <string name="kehidupan">Kehidupan</string>
    <string name="belajar_kehidupan">Belajar Kehidupan</string>
    <string name="group_konsultasi">Group Konsultasi</string>
    <string name="semua_kategori">Semua Kategori</string>
    <string name="beli_kelas">Beli Kelas</string>
    <string name="gabung_webinar">Gabung Webinar</string>
</resources>