<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="@dimen/_25sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_inisial"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/third"
                    android:gravity="center"
                    android:text="AAI"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_25sdp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/image_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/gambar_profile" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/third"
            android:textStyle="bold"
            android:textSize="@dimen/_24ssp"
            android:layout_marginBottom="10dp"
            android:text="@string/bearer_token" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/third"
            android:textStyle="bold"
            android:textSize="@dimen/_18ssp"
            android:text="@string/bearer_token" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/enter"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="20dp"
            android:text="@string/ganti_data_profile" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/enter"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:text="@string/logout_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>